--- a/mongodb/docker-compose.yml
+++ b/mongodb/docker-compose.yml
@@ -1,22 +1,19 @@
 # Use root/example as user/password credentials
-version: '3.1'
+version: "3.1"
 
 services:
-
   mongo:
-    image: mongo
+    image: mongo:latest
+    container_name: mongodb
     restart: always
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: satuperxdx
-
-  mongo-express:
-    image: mongo-express
-    restart: always
     ports:
-      - 8081:8081
-    environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: root
-      ME_CONFIG_MONGODB_ADMINPASSWORD: satuperxdx
-      ME_CONFIG_MONGODB_URL: mongodb://root:satuperxdx@mongo:27017/
-      ME_CONFIG_BASICAUTH: false
+      - "27017:27017"
+    volumes:
+      - mongodb_data:/data/db
+
+volumes:
+  mongodb_data:
+    driver: local
