--- a/mongodb/docker-compose.yml
+++ b/mongodb/docker-compose.yml
@@ -1,4 +1,3 @@
-# Use root/example as user/password credentials
 version: "3.1"
 
 services:
@@ -10,7 +9,25 @@ services:
       - "3456:27017"
     volumes:
       - mongodb_data:/data/db
+      - ./mongodb_logs:/var/log/mongodb
+    networks:
+      - monitoring_net
+
+  mongodb-exporter:
+    image: bitnami/mongodb-exporter:latest
+    environment:
+      - MONGODB_URI=mongodb://mongodb:27017
+    ports:
+      - "9216:9216"
+    depends_on:
+      - mongo
+    networks:
+      - monitoring_net
 
 volumes:
   mongodb_data:
     driver: local
+
+networks:
+  monitoring_net:
+    external: true
